# openpose_caffe_train

./: .gitmodules  CMakeLists.txt  Makefile  README.md
autocompile/: Makefile.config.Ubuntu14.example  Makefile.config.Ubuntu14_cuda_7.example  Makefile.config.Ubuntu16.example  Makefile.config.Ubuntu16_cuda_7.example  caffeToOpenPoseCaffe.md  compile_caffe.sh
include/caffe/: blob.hpp
include/caffe/layers/: cudnn_conv_layer.hpp
include/caffe/openpose/: dataAugmentation.hpp  getLine.hpp  metaData.hpp  oPDataTransformer.hpp  poseModel.hpp
include/caffe/openpose/layers/: oPDataLayer.hpp  oPVideoLayer.hpp
include/openpose_private/utilities/: openCvMultiversionHeaders.hpp
op/: CMakeLists.txt  opcaffe.cpp  test.py
src/caffe/: CMakeLists.txt  blob.cpp
src/caffe/layers/: cudnn_conv_layer.cpp  cudnn_conv_layer.cu  window_data_layer.cpp
src/caffe/openpose/: dataAugmentation.cpp  getLine.cpp  metaData.cpp  oPDataTransformer.cpp  poseModel.cpp
src/caffe/openpose/layers/: oPDataLayer.cpp  oPVideoLayer.cpp
src/caffe/proto/: caffe.proto
src/caffe/util/: io.cpp
